--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,10 +1,10 @@
 name: run-tests
 
 on:
-  push:
-    branches-ignore:
+  pull_request:
+    types: [opened, reopened, synchronize]
+    branches:
       - main
-      - stage
 
 jobs:
   job-execute-tests:
