--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,14 @@
 default_language_version:
   python: python3.8
 repos:
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.1.6
+  - repo: https://github.com/psf/black
+    rev: 23.9.1
     hooks:
-      - id: ruff
-        args:
-          - --fix
-      - id: ruff-format
+      - id: black
+  - repo: https://github.com/pycqa/flake8
+    rev: 6.1.0
+    hooks:
+      - id: flake8
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.7.1
     hooks:
