--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,44 +51,5 @@ ignore_missing_imports = true
 strict = true
 plugins = ["mypy_django_plugin.main"]
 
-[tool.ruff]
-select = ["ALL"]
-ignore = [
-    "COM812",
-    "D104",
-    "FA100",
-    "ANN101",
-    "ANN102",
-    "ERA001",
-    "RUF001",
-    "RUF002",
-    "RUF003",
-    "D212",
-    "D400",
-    "D415",
-    "D203",
-    "D102",
-    "D210",
-    "DTZ003",
-    "D100",
-    "D107",
-    "FBT",
-    "TRY400",
-    "TRY003",
-    "PT009",
-]
-exclude = [
-    ".git",
-    "__pycache__",
-    ".venv/*",
-    "*.pyc",
-    ".mypy_cache",
-    ".pytest_cache",
-    "setup.py",
-]
+[tool.black]
 line-length = 120
-force-exclude = true
-dummy-variable-rgx = "(?x)(^venv/ | ^venv\\.py$)"
-show-fixes = true
-show-source = true
-target-version = "py38"
