--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.8"
 psycopg2-binary = "^2.9.9"
+django-threadlocals = "^0.10"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
