--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ classifiers = [
 python = "^3.8"
 psycopg2-binary = "^2.9.9"
 django-threadlocals = "^0.10"
+pytest-django = "^4.7.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
